--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,4 @@
 PORT=3000
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=train_db
 JWT_SECRET=verysecret_jwt_key
 JWT_EXPIRES_IN=3600s
+DATABASE_URL=postgresql://postgres:PASSWORD@db.svfgptecyfsgszphcwqo.supabase.co:5432/postgres?sslmode=require
